--- a/s3.md
+++ b/s3.md
@@ -32,4 +32,48 @@
 ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/ec19edac-6dca-4804-a477-f7a12a7bbf79)
 ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/da7b9197-c6c9-4f35-8a8a-29b274af8232)
 
-##
+## S3 Requester pays
+
+## S3 event notifications - IAM permissions
+ ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/278844dd-5cc2-4087-9397-823349fafca6)
+ ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/898b4838-40a0-4cae-bc52-29c338fe7d51)
+
+## S3 perfomance
+![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/dd784725-1b54-4c15-a5dd-8febb1ca6229)
+
+## S3 perfomance - S3 Byte range fetches
+ ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/66b803ab-6957-4314-a489-2dc093a3f4f5)
+
+## S3 select and Glacier select
+![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/98befa2c-52c6-4b9f-bc20-061edc4acc58)
+
+## S3 batch operations
+![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/a0245443-5a56-4214-b3fc-903f35efbd25)
+
+## STORAGE lens
+![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/256e44e8-702b-444e-8f3f-88dedd237fe4)
+
+## S3 - object encryption
+ ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/61e0528a-1399-4ce1-9e9a-486443d289b4)
+* SSE-S3 ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/33e820f1-4dc3-497b-8747-5be76d8da80a)
+* SSE-KMS ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/3d350db9-74da-4491-b22d-104f086b1023), ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/14e9ee9b-43aa-4129-b7b0-2a2cb996adb8)
+* SSE-C  ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/f3e50572-620d-4fda-b025-9742a8e4ec8a)
+* Client side encryption  ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/57289734-77cc-4d83-a72e-6ff2e417b4a0)
+* ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/d90afec1-a22f-4297-8276-d93e311ddc80)
+
+## What is CORS
+* Cross origin resource sharing
+* ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/8326b761-6632-43c6-a37d-cc99eb84484e)
+![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/37027690-fd66-4a11-b79b-fc1d2dc36621)
+
+## S3 Access Logs
+
+## S3 Glacier Valut lock
+![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/df3f71de-bb32-4b7b-b28a-02623873bd2c)
+
+## S3 object lock
+![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/1b4d7546-dc5a-4dcc-b22b-687b5e2de855)
+
+
+
+ 
