--- a/s3.md
+++ b/s3.md
@@ -74,6 +74,9 @@
 ## S3 object lock
 ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/1b4d7546-dc5a-4dcc-b22b-687b5e2de855)
 
+## S3 Access points
+
+
 
 
  
