--- a/s3.md
+++ b/s3.md
@@ -74,7 +74,10 @@
 ## S3 object lock
 ![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/1b4d7546-dc5a-4dcc-b22b-687b5e2de855)
 
-## S3 Access points
+## S3 Access points / VPC origin / Object lamda
+![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/ec2b3d0b-230e-4a72-b308-625ccd7e3653)
+![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/b579347e-37d1-4119-a586-1ec6493f7ed5)
+![image](https://github.com/bhargavsp/aws_solution-architect/assets/45779321/0be53066-f6e8-46d8-ae64-091e8739b358)
 
 
 
